# make-runner

./: README.rst  pyproject.toml
example/: Makefile
make_runner/: __init__.py  command_line.py  makefile_parser.py  run.py  utils.py
tests/: test_make_runner.py
